k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ingress-class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.org/client-max-body-size: "100mb"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service-srv
                port:
                  number: 3000
          - path: /api/booking/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-service-srv
                port:
                  number: 3001
          - path: /api/event/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-service-srv
                port:
                  number: 3002
          - path: /api/operation/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: operation-service-srv
                port:
                  number: 3003
          - path: /api/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service-srv
                port:
                  number: 3004
