k8s/nginx/protected-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protected-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service-srv.default.svc.cluster.local:3000/api/auth/validate"
    nginx.ingress.kubernetes.io/auth-method: "GET"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization $http_authorization;
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/booking/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-service-srv
                port:
                  number: 3001
          - path: /api/event/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-service-srv
                port:
                  number: 3002
          - path: /api/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service-srv
                port:
                  number: 3003
